@@ -1,3 +1,9 @@
+2009-11-18  Ivan Maidanski <ivmai@mail.ru> (really mostly Zoltan Varga)
+
+	* include/gc.h (GC_get_suspend_signal): New function declaration.
+	* misc.c (GC_get_suspend_signal): New API function (only if
+	THREADS).
+
 2009-11-16  Ivan Maidanski <ivmai@mail.ru>
 
 	* alloc.c (min_bytes_allocd): Multiply GC_free_space_divisor by
